--- a/style.css
+++ b/style.css
@@ -31,36 +31,41 @@ header.header h1 {
 }
 
 .nav {
-    
     font-size: 50px;
     font-family: monospace;
     font-weight: lighter;
     color:rgb(152, 188, 223);
     text-align: right;
-    padding-right: 25px;
+    margin-bottom: 50px;
 }
 
 .nav a {
     color:rgb(174, 203, 230);
     font-family:monospace;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .hero {
     display: flex;
+    flex: 1 0 25px;
     height: 400px;
     width: 100%;
     background-image: url("./Images/penny-bridge.jpeg");
     background-size:cover;
     background-position-y: 15%;
+    background-position-x: 50%;
     border-radius: 24px;
     border: 8px solid#0e1820d5;
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
 }
 
 .container-1 {
-    display: inline-flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    flex-wrap: wrap;
+    padding: 5px 5px 5px 5px;
+
 }
 
 h1 {
@@ -69,20 +74,21 @@ h1 {
 }
 
 h2 {
-    font-size: 35px;
+    font-size: 20px;
     font-family: monospace;
-    padding-right: 5%;
+    margin-right: 20px;
 }
+
 
 h3 {
     font-size: 70px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
-    margin-right: 25%;
+    
 }
 
 .box-1 {
     width: 1100px;
-    height: 250px;
+    height: 200px;
     border: 15px solid rgba(0, 0, 0, 0.678); 
     padding: 45px;
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
@@ -93,8 +99,9 @@ h3 {
 
 .container-2  {
     display: flex;
-    align-items: flex-end;
-    flex-direction: column;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .box-2 img {
@@ -165,7 +172,6 @@ h3 {
 }
 
 .footer {
-    display: flex;
     background-color: #0e1820d5;
     border-radius: 24px 24px 24px 24px;
     height: 125px;
@@ -173,90 +179,74 @@ h3 {
 }
 
 li {
-    display: inline-block;
+    flex: 0 1 5px;
     color:rgb(174, 203, 230);
     padding-left: 50px;
     padding-top: 25px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
     font-family: monospace;
-    font-size: 35px;
+    font-size: 25px;
 }
 
-@media screen and (max-width:992px) {
+@media screen and (max-width:414px) {
     .body {
-        width: 100vw;
-    }
-    .header {
-        width: 100vw;
-    }
-    .header h1 {
-        width: 100vw;
-        height: 20vw;
-    }
-    h2 {
-        width: 100vw;
-    }
-    .nav {
-        width: 100vw;
-    }
-    .box-1 {
-        width: 100vw;
-    }
-    .box-2 img {
-        width: 100vw;
-    }
-    .box-3 img {
-        width: 100vw;
-    }
-    .box-4 img {
-        width: 100vw;
-    }   
-    .box-5 img {
-        width: 100vw;
-    }
-    .footer {
-        width: 100vw;
-        height: auto;
-    }
+        width: max-content;
     }
 
-@media screen and (max-width:768px) {
-    .body {
-        width: 100vw;
-    }
     .header {
         width: 100vw;
+        height: 20vh;
     }
-    .header h1 {
+
+
+    .header.header h1 {
+        font-size: 65px;
+    }
+
+    .hero {
         width: 100vw;
     }
+
     h2 {
         width: 100vw;
     }
-    .nav {
-        width: 100vw;
-    }
+
     .box-1 {
         width: 100vw;
     }
+
     .box-2 img {
         width: 100vw;
     }
+
     .box-3 img {
         width: 100vw;
     }
+
     .box-4 img {
         width: 100vw;
-    }   
+    }
+
     .box-5 img {
         width: 100vw;
     }
+
     .footer {
         width: 100vw;
         height: auto;
     }
+
+    li {
+        width: 50vw;
     }
-    
+
+    #Project-One {
+        width: 100vw;
+        flex-wrap: wrap;
+    }
+
+    }
+
 
 
 
