--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h3 {
 }
 
 .box-1 {
-    width: 1100px;
+    width: 600px;
     height: 200px;
     border: 15px solid rgba(0, 0, 0, 0.678); 
     padding: 45px;
@@ -195,7 +195,7 @@ li {
 
     .header {
         width: 100vw;
-        height: 20vh;
+        height: 27vh;
     }
 
 
@@ -205,6 +205,7 @@ li {
 
     .hero {
         width: 100vw;
+        height: 40vh;
     }
 
     h2 {
@@ -238,6 +239,7 @@ li {
 
     li {
         width: 50vw;
+        color: rgb(174, 203, 230);
     }
 
     #Project-One {
