--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ header.header h1 {
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
+
+
+/* adds navigation to the page */      
+
 .nav {
     font-size: 50px;
     font-family: monospace;
@@ -44,6 +48,10 @@ header.header h1 {
     font-family:monospace;
     font-size: 20px;
 }
+
+
+
+
 
 .hero {
     display: flex;
@@ -65,7 +73,6 @@ header.header h1 {
     justify-content: left;
     flex-wrap: wrap;
     padding: 5px 5px 5px 5px;
-
 }
 
 h1 {
@@ -74,21 +81,20 @@ h1 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 30px;
     font-family: monospace;
-    margin-right: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
-
 
 h3 {
     font-size: 70px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
-    
 }
 
 .box-1 {
     width: 600px;
-    height: 200px;
+    height: 300px;
     border: 15px solid rgba(0, 0, 0, 0.678); 
     padding: 45px;
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
@@ -187,6 +193,11 @@ li {
     font-family: monospace;
     font-size: 25px;
 }
+
+
+
+/* adds responsiveness for mobile devices */
+
 
 @media screen and (max-width:414px) {
     .body {
