--- a/style.css
+++ b/style.css
@@ -49,16 +49,13 @@ header.header h1 {
     font-size: 20px;
 }
 
-
-
-
-
-.hero {
+div.hero {
     display: flex;
     flex: 1 0 25px;
     height: 400px;
     width: 100%;
-    background-image: url("./Images/penny-bridge.jpeg");
+    padding-top: 40px;
+    background-image: url("./Images/graphwall.jpg");
     background-size:cover;
     background-position-y: 15%;
     background-position-x: 50%;
@@ -72,10 +69,13 @@ header.header h1 {
     flex-direction: row;
     justify-content: left;
     flex-wrap: wrap;
-    padding: 5px 5px 5px 5px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 h1 {
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 70px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
 }
@@ -88,11 +88,14 @@ p {
 }
 
 h3 {
+    padding-bottom: 70px;
+    text-align: center;
     font-size: 70px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
 }
 
 .box-1 {
+    
     width: 600px;
     height: 300px;
     border: 15px solid rgba(0, 0, 0, 0.678); 
@@ -103,12 +106,22 @@ h3 {
     color: rgb(5, 20, 20);
 }
 
+.p1{
+    
+    text-align: center;
+    font-size: 40px;
+    font-family: monospace;
+}
+
 .container-2  {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+
+    padding-bottom: 60px;
 }
+
 
 .box-2 img {
     width: 1000px;
@@ -120,9 +133,11 @@ h3 {
 
 .container-3 {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 40px;
+    font-family: monospace;
+    text-align: center;
 }
 
 .box-3  img {
@@ -132,6 +147,7 @@ h3 {
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
+
 
 .box-4  img {
     width: 420px;
@@ -156,26 +172,6 @@ h3 {
     font-family: monospace; 
 }
 
-#Project-Two {
-    color: rgb(5, 20, 20);
-    text-align: center;
-    font-size: 40px;
-    font-family: monospace;
-}
-
-#Project-Three {
-    color: rgb(5, 20, 20);
-    text-align: center;
-    font-size: 40px;
-    font-family: monospace;
-}
-
-#Project-Four {
-    color: rgb(5, 20, 20);
-    text-align: center;
-    font-size: 40px;
-    font-family: monospace;
-}
 
 .footer {
     background-color: #0e1820d5;
@@ -193,7 +189,6 @@ li {
     font-family: monospace;
     font-size: 25px;
 }
-
 
 
 /* adds responsiveness for mobile devices */
@@ -220,6 +215,7 @@ li {
 
     .box-1 {
         width: 100vw;
+        height: 60vh;
     }
 
     .box-2 img {
