--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(90deg,#0e1820d5 25%, rgb(174, 203, 230));
+    background: linear-gradient(0deg, rgb(174, 203, 230),#0e1820d5 80%);
 }
 
 .header { 
@@ -174,6 +174,8 @@ h3 {
 
 
 .footer {
+    margin-bottom: 20px;
+    margin-top: 30px;
     background-color: #0e1820d5;
     border-radius: 24px 24px 24px 24px;
     height: 125px;
@@ -194,7 +196,7 @@ li {
 /* adds responsiveness for mobile devices */
 
 
-@media screen and (max-width:414px) {
+@media screen and (max-width:420px) {
     .body {
         width: max-content;
     }
@@ -250,6 +252,67 @@ li {
     }
 
     }
+
+    @media screen and (min-width:421px) and (max-width: 767px) {
+        .body {
+            width: max-content;
+        }
+    
+        .header {
+            width: 100vw;
+            height: 27vh;
+        }
+    
+        .header.header h1 {
+            font-size: 65px;
+        }
+    
+        .hero {
+            width: 100vw;
+            height: 40vh;
+        }
+    
+        .box-1 {
+            width: 100vw;
+            height: 50vh;
+        }
+    
+        .box-2 img {
+            width: 100vw;
+        }
+    
+        .box-3 img {
+            width: 100vw;
+            margin-bottom: 30px;
+        }
+    
+        .box-4 img {
+            width: 100vw;
+            margin-bottom: 30px;
+        }
+    
+        .box-5 img {
+            width: 100vw;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+    
+        .footer {
+            width: 100vw;
+            height: auto;
+        }
+    
+        li {
+            width: 50vw;
+            color: rgb(174, 203, 230);
+        }
+    
+        #Project-One {
+            width: 100vw;
+            flex-wrap: wrap;
+        }
+    
+        }
 
 
 
