--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    background: linear-gradient(0deg, rgb(174, 203, 230),#0e1820d5 80%);
+    background: linear-gradient(0deg, #0f1a22d5 30%, rgb(174, 203, 230));
+    /* background: linear-gradient(0deg, rgb(174, 203, 230),#0e1820d5 80%); */
 }
 
 .header { 
@@ -174,6 +175,7 @@ h3 {
 
 
 .footer {
+    text-align: center;
     margin-bottom: 20px;
     margin-top: 30px;
     background-color: #0e1820d5;
