--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
 
+
 * {
-    box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
+
+
+
+
+
+
+
 
 body {
     background: linear-gradient(0deg, #0f1a22d5 30%, rgb(174, 203, 230));
-    /* background: linear-gradient(0deg, rgb(174, 203, 230),#0e1820d5 80%); */
 }
+
 
 .header { 
     display: flex;
     justify-content: space-between;
     color:rgb(174, 203, 230);
     background-color: #0e1820d5;
-    text-align:left; 
     border-radius: 24px 24px 24px 24px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
     height: 125px;
@@ -23,58 +29,63 @@ body {
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
 }
 
-header.header h1 { 
-    display: flex;
-    flex-direction: row;
-    left: 10px;
-    font-size: 100px;
+h1 {
+    font-size: 75px;
+    position: relative;
     font-family:Georgia, 'Times New Roman', Times, serif;
+    animation: heading;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes heading {
+    0%    {top: -100px}
+    100%  {top: 20px}
 }
 
 
-
-/* adds navigation to the page */      
 
 .nav {
-    font-size: 50px;
+    display: flex;
+}
+
+
+a {
+    padding: 15px;
+    color:rgb(174, 203, 230);
+    font-size: 30px;
     font-family: monospace;
     font-weight: lighter;
-    color:rgb(152, 188, 223);
-    text-align: right;
-    margin-bottom: 50px;
+    margin-bottom: 50px;   
 }
 
-.nav a {
-    color:rgb(174, 203, 230);
-    font-family:monospace;
-    font-size: 20px;
-}
+
 
 div.hero {
+    border-radius: 50px;
     display: flex;
-    flex: 1 0 25px;
-    height: 400px;
-    width: 100%;
+    flex-direction: column;
+    height: 800px;
+    width: 50%;
     padding-top: 40px;
     background-image: url("./Images/graphwall.jpg");
     background-size:cover;
-    background-position-y: 15%;
-    background-position-x: 50%;
-    border-radius: 24px;
-    border: 8px solid#0e1820d5;
+    padding-top: 20px;
+    margin-top: 20px;
+    border: 8px solid#162734d5;
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
 }
 
 .container-1 {
     display: flex;
     flex-direction: row;
-    justify-content: left;
-    flex-wrap: wrap;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    
+    
+    
 }
 
-h1 {
+
+h2 {
     margin-left: 30px;
     margin-right: 30px;
     font-size: 70px;
@@ -96,13 +107,13 @@ h3 {
 }
 
 .box-1 {
-    
+    margin-top: 20px;
     width: 600px;
     height: 300px;
-    border: 15px solid rgba(0, 0, 0, 0.678); 
+    border: 15px solid #162734d5; 
     padding: 45px;
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
-    border-radius: 24px;
+    border-radius: 50px;
     background: linear-gradient(180deg,#415c74d5 5%, rgb(174, 203, 230));
     color: rgb(5, 20, 20);
 }
@@ -119,7 +130,7 @@ h3 {
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-
+    
     padding-bottom: 60px;
 }
 
@@ -127,7 +138,7 @@ h3 {
 .box-2 img {
     width: 1000px;
     height: 400px;
-    border: 15px solid rgba(0, 0, 0, 0.678); 
+    border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
@@ -144,7 +155,7 @@ h3 {
 .box-3  img {
     width: 420px;
     height: 400px;
-    border: 15px solid rgba(0, 0, 0, 0.678); 
+    border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
@@ -153,7 +164,7 @@ h3 {
 .box-4  img {
     width: 420px;
     height: 400px;
-    border: 15px solid rgba(0, 0, 0, 0.678); 
+    border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
@@ -161,7 +172,7 @@ h3 {
 .box-5  img {
     width: 420px;
     height: 400px;
-    border: 15px solid rgba(0, 0, 0, 0.678); 
+    border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
@@ -184,7 +195,13 @@ h3 {
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
 }
 
+ul {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 li {
+    list-style: none;
     flex: 0 1 5px;
     color:rgb(174, 203, 230);
     padding-left: 50px;
@@ -195,12 +212,18 @@ li {
 }
 
 
-/* adds responsiveness for mobile devices */
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+}
+html.is-animating .transition-fade {
+    opacity: 0;
+}
 
 
 @media screen and (max-width:420px) {
     .body {
-        width: max-content;
+        width: 100vw;
     }
 
     .header {
@@ -257,7 +280,7 @@ li {
 
     @media screen and (min-width:421px) and (max-width: 767px) {
         .body {
-            width: max-content;
+            width: 100vw;
         }
     
         .header {
