--- a/style.css
+++ b/style.css
@@ -213,12 +213,21 @@ li {
 
 
 .transition-fade {
-    transition: 0.4s;
+    transition: 1000ms;
     opacity: 1;
+    transform: translateX(0);
+    transform-origin: left;
 }
 html.is-animating .transition-fade {
     opacity: 0;
+    transform: translateX(100%);
 }
+
+html.is-leaving .transition-fade {
+    opacity: 0;
+    transform: translateX(0);
+}
+
 
 
 @media screen and (max-width:420px) {
