--- a/style.css
+++ b/style.css
@@ -213,20 +213,20 @@ li {
 
 
 .transition-fade {
-    transition: 2s;
+    transition: 1s;
     opacity: 1;
-    transform: translateX(0);
-    transform-origin: left;
+    /* transform: translateX(0);
+    transform-origin: left; */
 }
 html.is-animating .transition-fade {
     opacity: 0;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
 }
 
-html.is-leaving .transition-fade {
+/* html.is-leaving .transition-fade {
     opacity: 0;
     transform: translateX(0);
-}
+} */
 
 
 
