--- a/style.css
+++ b/style.css
@@ -72,13 +72,12 @@ div.hero {
 .container-1 {
     display: flex;
     flex-direction: row;
-    
-    
-    
+    align-items: center;
 }
 
 
 h2 {
+    font-family:Georgia, 'Times New Roman', Times, serif;
     margin-left: 30px;
     margin-right: 30px;
     font-size: 70px;
@@ -100,6 +99,7 @@ h3 {
 }
 
 .box-1 {
+    margin-right: 20px;
     margin-top: 20px;
     width: 600px;
     height: 300px;
