--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 
-* {
+/* * {
     margin: 0;
     padding: 0;
-}
+} */
 
 
 body {
-    background: linear-gradient(0deg, #0f1a22d5 30%, rgb(174, 203, 230));
+    /* background: linear-gradient(0deg, #0f2637d5 10%, rgb(0, 125, 102));
+    background-repeat:repeat-y; */
+    background-image: url(./Images/kevin-wong-WJ_LL15Iw0I-unsplash.jpg);
+    background-repeat: repeat-y;
+    
     
 }
 
@@ -34,7 +38,7 @@ h1 {
 
 @keyframes heading {
     0%    {top: -100px}
-    100%  {top: 20px}
+    100%  {top: 5px}
 }
 
 
@@ -55,13 +59,11 @@ a {
 
 
 div.hero {
-    border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    height: 800px;
-    width: 50%;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
     padding-top: 40px;
-    background-image: url("./Images/graphwall.jpg");
+    background-image: url("./Images/chicago.jpeg");
     background-size:cover;
     padding-top: 20px;
     margin-top: 20px;
@@ -72,12 +74,13 @@ div.hero {
 
 .container-1 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
 
 h2 {
+    color: rgb(174, 203, 230);
     font-family:Georgia, 'Times New Roman', Times, serif;
     margin-left: 30px;
     margin-right: 30px;
@@ -86,6 +89,7 @@ h2 {
 }
 
 p {
+    
     font-size: 30px;
     font-family: monospace;
     margin-bottom: 20px;
@@ -93,10 +97,10 @@ p {
 }
 
 h3 {
-    padding-bottom: 70px;
+    color: rgb(174, 203, 230);
     text-align: center;
     font-size: 70px;
-    text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
+    
 }
 
 .box-1 {
@@ -113,7 +117,7 @@ h3 {
 }
 
 .p1{
-    
+    color:rgb(174, 203, 230);
     text-align: center;
     font-size: 40px;
     font-family: monospace;
@@ -130,6 +134,7 @@ h3 {
 
 
 .box-2 img {
+    
     width: 1000px;
     height: 400px;
     border: 10px solid #162734d5; 
@@ -138,6 +143,7 @@ h3 {
 }
 
 .container-3 {
+    color:rgb(174, 203, 230);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
