--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 h1 {
     font-size: 75px;
     position: relative;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Megrim', cursive;
     animation: heading;
     animation-duration: 3s;
     animation-fill-mode: forwards;
@@ -52,7 +52,7 @@ a {
     padding: 15px;
     color:rgb(174, 203, 230);
     font-size: 30px;
-    font-family: monospace;
+    font-family: 'Megrim', cursive;
     font-weight: lighter;
     margin-bottom: 50px;   
 }
@@ -83,7 +83,7 @@ div.hero {
 
 h2 {
     color: rgb(174, 203, 230);
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Megrim', cursive;
     margin-left: 30px;
     margin-right: 30px;
     font-size: 70px;
@@ -91,14 +91,15 @@ h2 {
 }
 
 p {
-    
+    text-align: center;
+    font-family: 'Permanent Marker', cursive;
     font-size: 30px;
-    font-family: monospace;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 h3 {
+    
     color: rgb(174, 203, 230);
     text-align: center;
     font-size: 70px;
@@ -122,21 +123,22 @@ h3 {
     color:rgb(174, 203, 230);
     text-align: center;
     font-size: 40px;
-    font-family: monospace;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 .container-2  {
+    font-family: 'Megrim', cursive;
+    color:rgb(174, 203, 230);
+    font-size: 40px;
     display: flex;
     justify-content: center;
     flex-direction: row;
-    flex-wrap: wrap;
-    
+    text-align: center;
     padding-bottom: 60px;
 }
 
 
 .box-2 img {
-    
     width: 1000px;
     height: 400px;
     border: 10px solid #162734d5; 
@@ -145,12 +147,12 @@ h3 {
 }
 
 .container-3 {
+    font-family: 'Megrim', cursive;
     color:rgb(174, 203, 230);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     font-size: 40px;
-    font-family: monospace;
     text-align: center;
 }
 
@@ -179,13 +181,6 @@ h3 {
     border-radius: 24px;
 }
 
-#Project-One {
-    display: flex;
-    color: rgb(5, 20, 20);
-    font-size: 40px;
-    font-family: monospace; 
-}
-
 
 .footer {
     text-align: center;
@@ -209,7 +204,7 @@ li {
     padding-left: 50px;
     padding-top: 25px;
     text-shadow: 0px 5px 6px rgba(0, 0, 0, 0.678);
-    font-family: monospace;
+    font-family: 'Megrim', cursive;
     font-size: 25px;
 }
 
