--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ body {
     /* background: linear-gradient(0deg, #0f2637d5 10%, rgb(0, 125, 102));
     background-repeat:repeat-y; */
     background-image: url(./Images/kevin-wong-WJ_LL15Iw0I-unsplash.jpg);
-    
-    
-    
 }
 
 
@@ -62,8 +59,6 @@ a {
 }
 
 
-
-
 div.hero {
     width: 300px;
     height: 300px;
@@ -96,8 +91,8 @@ h2 {
 
 p {
     text-align: center;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 30px;
+    font-family: 'Cinzel', serif;
+    font-size: 40px;
     margin-bottom: 50px;
     padding-bottom: 50px;
 }
@@ -281,10 +276,7 @@ html.is-animating .transition-fade {
         color: rgb(174, 203, 230);
     }
 
-    #Project-One {
-        width: 100vw;
-        flex-wrap: wrap;
-    }
+    
 
     }
 
