--- a/style.css
+++ b/style.css
@@ -130,33 +130,28 @@ h3 {
     color:rgb(174, 203, 230);
     font-size: 40px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
     text-align: center;
     padding-bottom: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
 .box-2 img {
-    width: 1000px;
+    width: 600px;
     height: 400px;
     border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
     border-radius: 24px;
 }
 
-.container-3 {
-    font-family: 'Megrim', cursive;
-    color:rgb(174, 203, 230);
-    display: flex;
-    
-    justify-content: space-evenly;
-    font-size: 40px;
-    text-align: center;
-}
+
 
 .box-3  img {
-    width: 420px;
+    width: 600px;
     height: 400px;
     border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
@@ -165,7 +160,7 @@ h3 {
 
 
 .box-4  img {
-    width: 420px;
+    width: 600px;
     height: 400px;
     border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
@@ -173,7 +168,7 @@ h3 {
 }
 
 .box-5  img {
-    width: 420px;
+    width: 600px;
     height: 400px;
     border: 10px solid #162734d5; 
     box-shadow: 0px 7px 10px rgba(3, 3, 3, 0.68);
